<resources>
    <string name="app_name">ShoeStore</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_title">Login</string>
    <string name="email__input_hint">Enter your email</string>
    <string name="email_label">Email:</string>
    <string name="password_label">Password:</string>
    <string name="login_button">Login</string>
    <string name="signup_button">Sign up</string>
    <string name="welcome_text">Welcome to ShoeStore!</string>
    <string name="description_text">List your own shoes or purchase new/used sneakers from thousands of people online</string>
    <string name="welcome_button">Welcome!</string>
    <string name="instruction_title">Instructions</string>
    <string name="instructions_text">1. Scroll through shoes until you find one you like\n2. Click on shoe to get more details about it\n3. Add shoe to cart if interested</string>
    <string name="next_button">Next</string>
    <string name="shoe_name_label">Shoe Name:</string>
    <string name="shoe_company_label">Company:</string>
    <string name="shoe_size_label">Size:</string>
    <string name="shoe_description_label">Description:</string>
    <string name="cancel_button">Cancel</string>
    <string name="save_button">Save</string>
    <string name="logout_text">Logout</string>
</resources>
