<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="welcomeScreenViewModel"
            type="com.udacity.shoestore.screens.welcome.WelcomeScreenViewModel" />
    </data>

    <LinearLayout
        android:id="@+id/welcome_screen_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".WelcomeScreenFragment"
        android:orientation="vertical">


        <TextView
            android:id="@+id/welcome_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/welcome_text"
            android:textAlignment="center"
            android:textSize="34sp" />

        <TextView
            android:id="@+id/desciption_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/description_text"
            android:textAlignment="center" />

        <Button
            android:id="@+id/welcome_button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:onClick="@{ () -> welcomeScreenViewModel.showInstructionScreen() }"
            android:text="@string/welcome_button"
            android:textAlignment="center"
            android:textAllCaps="false" />
    </LinearLayout>

</layout>