<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="shoeDetailViewModel"
            type="com.udacity.shoestore.models.ShoesViewModel" />
        <variable
            name="shoeData"
            type="com.udacity.shoestore.models.Shoe" />
    </data>

    <!-- I used ConstraintLayout here for reasons similar to fragment_login.
    Each input needed a label so it made sense to have an anchor for each label to its input counterpart -->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/shoe_detail_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/shoe_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/shoe_name_label"
            android:textSize="16sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/shoe_name_input"
            app:layout_constraintEnd_toStartOf="@+id/shoe_name_input"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/shoe_name_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:autofillHints=""
            android:ems="10"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textSize="12sp"
            android:text="@={shoeData.name}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/shoe_name_label"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/shoe_company_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/shoe_company_label"
            android:textSize="16sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/shoe_company_input"
            app:layout_constraintEnd_toStartOf="@+id/shoe_company_input"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/shoe_company_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:autofillHints=""
            android:ems="10"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textSize="12sp"
            android:text="@={shoeData.company}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/shoe_company_label"
            app:layout_constraintTop_toBottomOf="@+id/shoe_name_input" />

        <TextView
            android:id="@+id/shoe_size_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/shoe_size_label"
            android:textSize="16sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/shoe_size_input"
            app:layout_constraintEnd_toStartOf="@+id/shoe_size_input"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/shoe_size_input"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:autofillHints=""
            android:ems="10"
            android:inputType="numberDecimal"
            android:minHeight="48dp"
            android:textSize="12sp"
            android:text="@={`` + shoeData.size}"
            app:layout_constraintStart_toEndOf="@+id/shoe_size_label"
            app:layout_constraintTop_toBottomOf="@+id/shoe_company_input" />

        <TextView
            android:id="@+id/shoe_description_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/shoe_description_label"
            android:textSize="16sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/shoe_description_input"
            app:layout_constraintEnd_toStartOf="@+id/shoe_description_input"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/shoe_description_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:autofillHints=""
            android:ems="10"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textSize="12sp"
            android:text="@={shoeData.description}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/shoe_description_label"
            app:layout_constraintTop_toBottomOf="@+id/shoe_size_input" />

        <Button
            android:id="@+id/cancel_button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel_button"
            android:onClick="@{ () -> shoeDetailViewModel.onCancel() }"
            app:layout_constraintBaseline_toBaselineOf="@+id/save_button"
            app:layout_constraintEnd_toStartOf="@+id/save_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/save_button"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/save_button"
            android:onClick="@{ () -> shoeDetailViewModel.onSave(shoeData.name, shoeData.company, shoeData.size, shoeData.description) }"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/cancel_button"
            app:layout_constraintTop_toBottomOf="@+id/shoe_description_input" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>