<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="shoeData"
            type="com.udacity.shoestore.models.Shoe" />
    </data>

    <!-- I used ConstraintLayout here due to reasons similar to fragment_shoe_detail.
    This is actually almost an exact copy of fragment_shoe_detail, but I used TextViews instead of EditTexts.
    Each label was tied to its shoe detail counterpart. -->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/shoe_listing_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/shoe_listing_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/shoe_name_label"
            android:textSize="16sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/shoe_listing_name"
            app:layout_constraintEnd_toStartOf="@+id/shoe_listing_name"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/shoe_listing_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:autofillHints=""
            android:ems="10"
            android:minHeight="48dp"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/shoe_listing_name_label"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/shoe_listing_company_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/shoe_company_label"
            android:textSize="16sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/shoe_listing_company"
            app:layout_constraintEnd_toStartOf="@+id/shoe_listing_company"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/shoe_listing_company"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:autofillHints=""
            android:ems="10"
            android:minHeight="48dp"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/shoe_listing_company_label"
            app:layout_constraintTop_toBottomOf="@+id/shoe_listing_name" />

        <TextView
            android:id="@+id/shoe_listing_size_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/shoe_size_label"
            android:textSize="16sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/shoe_listing_size"
            app:layout_constraintEnd_toStartOf="@+id/shoe_listing_size"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/shoe_listing_size"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:autofillHints=""
            android:ems="10"
            android:minHeight="48dp"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/shoe_listing_size_label"
            app:layout_constraintTop_toBottomOf="@+id/shoe_listing_company" />

        <TextView
            android:id="@+id/shoe_listing_description_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/shoe_description_label"
            android:textSize="16sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/shoe_listing_description"
            app:layout_constraintEnd_toStartOf="@+id/shoe_listing_description"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/shoe_listing_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:autofillHints=""
            android:ems="10"
            android:minHeight="48dp"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/shoe_listing_description_label"
            app:layout_constraintTop_toBottomOf="@+id/shoe_listing_size" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>